--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -12,6 +12,8 @@ import /init.trace.rc
 # Include CM's extra init file
 import /init.cm.rc
 
+import /init.jcrom.rc
+
 
 on early-init
     # Set init and its forked children's oom_adj.
